# platformics

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push-temp.yml  build-and-push.yml  build-and-test.yml  ci.yml  conventional-commits.yml  py-formatting.yml  release-please.yml  run_tests.yml
docs/: HOWTO-customize-templates.md  HOWTO-extend-generated-api.md  HOWTO-override-authorization.md  HOWTO-working-with-platformics.md  custom_code.md
platformics/: settings.py
platformics/api/: files.py  setup.py  uvicorn_worker.py
platformics/api/core/: deps.py  error_handler.py  gql_loaders.py  gql_to_sql.py  helpers.py  query_builder.py  strawberry_extensions.py
platformics/api/relay/: exceptions.py  fields.py  types.py
platformics/api/tests/: test_hashability.py
platformics/api/types/: entities.py
platformics/cli/: generate_token.py  main.py  platformics.py
platformics/codegen/: .generator.py.swp  generator.py
platformics/codegen/lib/: linkml_wrappers.py
platformics/codegen/templates/api/: mutations.py.j2  queries.py.j2
platformics/codegen/templates/api/helpers/: class_name.py.j2
platformics/codegen/templates/api/types/: class_name.py.j2
platformics/codegen/templates/api/validators/: class_name.py.j2
platformics/codegen/templates/cerbos/: config.yaml.j2
platformics/codegen/templates/cerbos/policies/: class_name.yaml.j2  derived_roles_common.yaml.j2  entity.yaml.j2  file.yaml.j2
platformics/codegen/templates/cerbos/policies/_schemas/: principal.json.j2
platformics/codegen/templates/database/migrations/: env.py.j2
platformics/codegen/templates/database/models/: __init__.py.j2  class_name.py.j2
platformics/codegen/templates/graphql_api/: mutations.py.j2  queries.py.j2
platformics/codegen/templates/graphql_api/helpers/: class_name.py.j2
platformics/codegen/templates/graphql_api/types/: class_name.py.j2
platformics/codegen/templates/support/: enums.py.j2  limit_offset.py.j2
platformics/codegen/templates/test_infra/factories/: class_name.py.j2
platformics/codegen/templates/validators/: class_name.py.j2
platformics/database/: connect.py
platformics/database/models/: __init__.py  base.py  file.py
platformics/graphql_api/: files.py  setup.py  uvicorn_worker.py
platformics/graphql_api/core/: deps.py  error_handler.py  errors.py  gql_loaders.py  query_builder.py  query_input_types.py  relay_interface.py  strawberry_extensions.py  strawberry_helpers.py
platformics/graphql_api/relay/: __init__.py  fields.py  types.py
platformics/graphql_api/tests/: test_hashability.py
platformics/graphql_api/types/: entities.py
platformics/schema/: base_types.yaml
platformics/security/: authorization.py  token_auth.py
platformics/support/: file_enums.py  format_handlers.py  sqlalchemy_helpers.py
platformics/test_infra/: main.py
platformics/test_infra/factories/: base.py
test_app/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  customMutations.py  customQueries.py  custom_mutations.py  custom_queries.py  docker-compose.yml  main.py  pyproject.toml
test_app/.devcontainer/: devcontainer.json
test_app/etc/: nginx.conf  supervisord.conf
test_app/schema/: README.md  schema.yaml
test_app/scripts/: seed.py
test_app/template_overrides/graphql_api/types/: uncaught_exception.py.j2
test_app/tests/: helpers.py  test_aggregate_filters.py  test_aggregate_queries.py  test_aggregates.py  test_authorization.py  test_authz_overrides.py  test_auto_values.py  test_basic_queries.py  test_bulk_download_deletion.py  test_bulk_download_policy.py  test_cascade_deletion.py  test_error_handling.py  test_field_constraints.py  test_field_descriptions.py  test_field_visibility.py  test_field_with_spaces.py  test_file_concatenation.py  test_file_mutations.py  test_file_queries.py  test_file_uploads.py  test_gql_meta_support.py  test_limit_offset_queries.py  test_nested_queries.py  test_sorting_queries.py  test_test_setup.py  test_where_clause.py
test_app/tests/fixtures/: test1.fastq
test_app/tests/output/api/: mutations.py  queries.py
test_app/tests/output/api/types/: contig.py  genomic_range.py  sample.py  sequencing_read.py
test_app/tests/output/database/models/: __init__.py  contig.py  genomic_range.py  sample.py  sequencing_read.py
test_app/tests/output/support/: enums.py
test_app/tests/output/test_infra/factories/: sample.py  sequencing_read.py
test_app/tmp/: notes.txt
