[tool.poetry]
name = "graphql_api"
version = "0.1.0"
description = "Platformics bio entities test app"
authors = ["CZI Infectious Disease Team <help@czid.org>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dev-dependencies]
black = "^24.4.0"
uvicorn = "^0.23.1"
gunicorn = "^22.0.0"
pytest = "^7.4.0"
pytest-postgresql = "^5.0.0"
factory-boy = "^3.3.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.5.1"
moto = "^4.2.3"
ruff = "^0.0.278"
isort = "^5.12.0"
faker-enum = "^0.0.2"
faker-biology = "^0.6.0"
httpx = "^0.24.1"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
asyncpg = "^0.28.0"
rich = "^13.7.0"
typer = "^0.9.0"
libcst = "^1.1.0"


[tool.black]
line-length = 120

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.12.
target-version = "py312"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.pytest.ini_options]
markers = [
    "asyncio",
]
